--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,7 @@
     .title{
         font-size: 4rem;
         font-family: 'Acme', sans-serif;
+        text-align: center;
     }
     h4{
         font-family: 'Acme', sans-serif;
@@ -19,4 +20,36 @@
         border: 2px solid black;
         margin-bottom: 2rem;
     }
+    button{
+        font-size: 1.3rem;
+        background-color: aqua;
+        padding: 1rem 2rem;
+        border-radius: 1.5rem;
+        cursor: pointer;
+    }
+    .buttons{
+        margin-bottom: 1rem;
+    }
+    input{
+        font-size: 1.3rem;
+        padding: 1rem 2rem;
+        border-radius: 1.5rem;
+        margin-bottom: 1rem;
+    }
+}
+
+@media screen and(max-width: 545px){
+    .content{
+        background-color: aquamarine;
+        button{
+            font-size: 1rem;
+            padding: 0.5rem 1rem;
+        }
+        input{
+            font-size: 1rem;
+            padding: 0.5rem 1rem;
+            border-radius: 1rem;
+            margin-bottom: 0.8rem;
+        }
+    }     
 }
